[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "scikit-build",
    "scipy", 
    "tbb-devel; platform_machine == 'x86' or platform_machine == 'x86_64'",
    "cmake>=3.10.2",
    "networkx",
    "qiskit"
]
build-backend = "setuptools.build_meta"

[tool.scikit-build]
# Configure CMake installation to ensure libraries go to package directory
cmake.install.component = "Unspecified"
# Ensure libraries are included in the package
cmake.install.args = ["--component", "Unspecified"]

[project]
name = "squander"
version = "1.9.4"
description = "C++ library with Python interface to train quantum circuits, quantum gate synthesis and state preparation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Peter Rakyta", email = "peter.rakyta@ttk.elte.hu"}
]
keywords = ["quantum", "circuits", "gate", "synthesis"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: C",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "qiskit",
    "qiskit-aer",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]




